--- a/Tur-Baseret 2D Spil/Tur-Baseret 2D Spil.csproj
+++ b/Tur-Baseret 2D Spil/Tur-Baseret 2D Spil.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="GameLib.csproj" />
+  </ItemGroup>
+
 </Project>
